--- a/HW_1/HW_1.html
+++ b/HW_1/HW_1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homewor_1</title>
+    <title>Homework_1</title>
 </head>
 <body>
     <script src="./HW_1.js"></script>
